--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -1,46 +1,74 @@
-<!doctype html>
-<html lang="es">
-<head>
-<meta charset="utf-8">
-<title>Ecocentro</title>
-	<link rel="stylesheet" href="estiloEco.css"/>
-	<link rel="stylesheet" href="style.css"/>
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Slider en Bootstrap</title>
+    <link rel="stylesheet" href="estiloEco.css"/>
+    <link rel="stylesheet" href="style.css"/>
+    
+    <meta name="viewport" content="initial-scale=1.0">
+    <meta charset="utf-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </head>
+  <body>
+    <header>
+    <nav>
+      <ul> <!-- ul para listas NO ordenadas-->
+        <li><a href="Econoticias.html">Econoticias</a></li> <!--li para cada elemento-->
+        <li><a href="hogar.html">Dispositivos <span class="icon-menu3"></span></a>
+          <ul>
+            <li><a href="Detalles.html">Detalles</a></li>
+            <li><a href="Inicio.html">Ecocentro</a></li>
+            <li><a href="Ayuda.html">Ayuda</a></li>
+          </ul>
+        </li>
 
-	<script type="text/javascript" src="jquery-3.1.1"></script>
-	<script type="text/javascript" src="funciones.js"></script>
-</head>
-
-<body>
-	<header>
-		<nav>
-			<ul> <!-- ul para listas NO ordenadas-->
-				<li><a href="Econoticias.html">Econoticias</a></li>	<!--li para cada elemento-->
-				<li><a href="Inicio.html">Ecocentro <span class="icon-menu3"></span></a>
-					<ul>
-						<li><a href="Detalles.html">Detalles</a></li>
-						<li><a href="hogar.html">Dispositivos</a></li>
-						<li><a href="Ayuda.html">Ayuda</a></li>
-					</ul>
-				</li>
-
-			</ul>
-		</nav>
-	</header>
-
-	
-	<li id="listaclima"><img src="Imagenes/clima.jpg" alt="" style="width:80px;height:50px;"> 
-		<font size="6"><b>Clima</b></font></li>
-	<div id="infoclima">
-	<font size="6" color=088A29 ><b>Caracas</b></font><br>
-	<font size="4" color=808080 ><b>Lunes 28/11/2016</b></font><br><br>
-	<font size="5"><b>Temperatura: </b></font><font size="5" color=5858FA><b>22°C</b></font><br>
-	<font size="5"><b>Probabilidad de precipitaciones: </b></font><font size="5" color=5858FA><b>44%</b></font><br>
-	<font size="5"><b>Humedad: </b></font><font size="5" color=5858FA><b>75%</b></font><br>
-	<font size="5"><b>Viento: a </b></font><font size="5" color=5858FA><b>0 km/h</b></font><br>
-	</div>
-
-	<img id="casaverde"src="Imagenes/hogar-ecologico.jpg" alt="" style="width:195px;height:100px;"> 
-</body>
+      </ul>
+    </nav>
+  </header>
+    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
+      <!-- Carousel indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <!-- Carousel items -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="Imagenes/clima.jpg" alt="First Slide">
+          <div class="carousel-caption">
+            <h3>Título de la primera diapositiva</h3>
+            <p>Contenido de la diapositiva</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="Imagenes/compu.jpg" alt="Second Slide">
+          <div class="carousel-caption">
+            <h3>Título de la segunda diapositiva</h3>
+            <p>Contenido de la diapositiva</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="Imagenes/cocina.jpg" alt="Third Slide">
+          <div class="carousel-caption">
+            <h3>Título de la tercera diapositiva</h3>
+            <p>Contenido de la diapositiva</p>
+          </div>
+        </div>
+      </div>
+      <!-- Carousel nav -->
+      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="carousel-control right" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
+  </body>
 </html>
