--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -31,6 +31,8 @@
       </ul>
     </nav>
   </header>
+
+
     <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
       <!-- Carousel indicators -->
       <ol class="carousel-indicators">
@@ -70,5 +72,23 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
+
+
+    <header>
+    <nav>
+      <ul> <!-- ul para listas NO ordenadas-->
+        <li><a href="Econoticias.html">Econoticias</a></li> <!--li para cada elemento-->
+        <li><a href="hogar.html">Dispositivos <span class="icon-menu3"></span></a>
+          <ul>
+            <li><a href="Detalles.html">Detalles</a></li>
+            <li><a href="Inicio.html">Ecocentro</a></li>
+            <li><a href="Ayuda.html">Ayuda</a></li>
+          </ul>
+        </li>
+
+      </ul>
+    </nav>
+  </header>
+  
   </body>
 </html>
