--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -43,21 +43,21 @@
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="Imagenes/clima.jpg" alt="First Slide">
+          <img src="Imagenes/Egipto.jpg" alt="First Slide">
           <div class="carousel-caption">
             <h3>Título de la primera diapositiva</h3>
             <p>Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/compu.jpg" alt="Second Slide">
+          <img src="Imagenes/Bramble.jpg" alt="Second Slide">
           <div class="carousel-caption">
             <h3>Título de la segunda diapositiva</h3>
             <p>Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/cocina.jpg" alt="Third Slide">
+          <img src="Imagenes/Egipto.jpg" alt="Third Slide">
           <div class="carousel-caption">
             <h3>Título de la tercera diapositiva</h3>
             <p>Contenido de la diapositiva</p>
