--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -54,6 +54,7 @@
           <div class="carousel-caption">
             <h3>Título de la segunda diapositiva</h3>
             <p>Contenido de la diapositiva</p>
+            <img src="Imagenes/Bramble.jpg" alt="Second Slide">
           </div>
         </div>
         <div class="item">
