--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -54,7 +54,7 @@
           <div class="carousel-caption">
             <h3 color="black">Título de la segunda diapositiva</h3>
             <p color="black">Contenido de la diapositiva</p>
-            <img src="Imagenes/Bramble.jpg" alt="Second Slide">
+            <img src="Imagenes/Bramble.jpg" alt="Second Slide" align="right">
           </div>
         </div>
         <div class="item">
