--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -32,6 +32,7 @@
     </nav>
   </header>
 
+    <!-- CAROUSEL 1 -->
 
     <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
       <!-- Carousel indicators -->
@@ -72,6 +73,50 @@
       <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
+
+
+    <!-- CAROUSEL 2 -->
+
+    <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
+      <!-- Carousel indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+        <li data-target="#myCarousel" data-slide-to="2"></li>
+      </ol>
+      <!-- Carousel items -->
+      <div class="carousel-inner">
+        <div class="item active">
+          <img src="Imagenes/Egipto.jpg" alt="First Slide">
+          <div class="carousel-caption">
+            <h3>Título de la primera diapositiva</h3>
+            <p>Contenido de la diapositiva</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="Imagenes/Bramble.jpg" alt="Second Slide">
+          <div class="carousel-caption">
+            <h3>Título de la segunda diapositiva</h3>
+            <p>Contenido de la diapositiva</p>
+          </div>
+        </div>
+        <div class="item">
+          <img src="Imagenes/Egipto.jpg" alt="Third Slide">
+          <div class="carousel-caption">
+            <h3>Título de la tercera diapositiva</h3>
+            <p>Contenido de la diapositiva</p>
+          </div>
+        </div>
+      </div>
+      <!-- Carousel nav -->
+      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      </a>
+      <a class="carousel-control right" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      </a>
+    </div>
+
 
 
     <header>
