--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -77,7 +77,7 @@
 
     <!-- CAROUSEL 2 -->
 
-    <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
+    <div id="myCarousel2" class="carousel slide" data-interval="5000" data-ride="carousel">
       <!-- Carousel indicators -->
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
