--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -109,10 +109,10 @@
         </div>
       </div>
       <!-- Carousel nav -->
-      <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+      <a class="carousel-control left" href="#myCarousel2" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left"></span>
       </a>
-      <a class="carousel-control right" href="#myCarousel" data-slide="next">
+      <a class="carousel-control right" href="#myCarousel2" data-slide="next">
       <span class="glyphicon glyphicon-chevron-right"></span>
       </a>
     </div>
