--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -17,6 +17,56 @@
   </head>
   <body>
 
+
+
+    <div class="container">
+    <div class="row">
+        <h2>Navbar with Logo - Bootstrap 2.3.2</h2>
+        <p>Logo must be 150x50</p>
+        <p>If you want to use a biggest logo you must change the values to:</p>
+        <ul>
+            <li><code>.navbar-inner{ ... }</code> - Set min-height as Your image height value + 10px</li>            
+            <li><code>.navbar .nav > li > a {...}</code> - Check yourself</li>
+            <li><code>.navbar .btn-navbar{...}</code> - Check the margin top to center verticaly</li>
+        </ul>
+    </div>
+    <div class="navbar">
+        <div class="navbar-inner">
+            <a class="brand" href="#">
+            <!-- UNCOMMENT THE CSS VALUES TO TEST OTHER DIMENTIONS -->
+            <!-- <img src="http://placehold.it/150x80&text=Logo" alt=""> -->
+            <img src="icono.png" alt="">
+            </a>
+            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            </a>
+            <div class="nav-collapse collapse">
+                <ul class="nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="#">"index.html"</a></li>
+                    <li><a href="#">"index.html"</a></li>
+                    <ul class="nav">
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Dropdown
+                            <b class="caret"></b>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="#">"index.html"</a></li>
+                                <li><a href="#">"index.html"</a></li>
+                                <li><a href="#">"index.html"</a></li>
+                                <li><a href="#">"index.html"</a></li>
+                            </ul>
+                        </li>
+                    </ul>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
+
     <!-- CAROUSEL 1 -->
 
     <div id="myCarousel" class="carousel slide" data-interval="5000" data-ride="carousel">
