--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -21,13 +21,10 @@
 
     <div class="container">
     <div class="row">
-        <h2>Navbar with Logo - Bootstrap 2.3.2</h2>
-        <p>Logo must be 150x50</p>
-        <p>If you want to use a biggest logo you must change the values to:</p>
         <ul>
-            <li><code>.navbar-inner{ ... }</code> - Set min-height as Your image height value + 10px</li>            
-            <li><code>.navbar .nav > li > a {...}</code> - Check yourself</li>
-            <li><code>.navbar .btn-navbar{...}</code> - Check the margin top to center verticaly</li>
+            <li><code>.navbar-inner{ 250 }</code> </li>            
+            <li><code>.navbar .nav > li > a {100}</code> </li>
+            <li><code>.navbar .btn-navbar{15}</code> </li>
         </ul>
     </div>
     <div class="navbar">
