--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -22,9 +22,9 @@
     <div class="container">
     <div class="row">
         <ul>
-            <li><code>.navbar-inner{ 250 }</code> </li>            
-            <li><code>.navbar .nav > li > a {100}</code> </li>
-            <li><code>.navbar .btn-navbar{15}</code> </li>
+            <li><code>.navbar-inner{ "250" }</code> </li>            
+            <li><code>.navbar .nav > li > a {"100"}</code> </li>
+            <li><code>.navbar .btn-navbar{"15"}</code> </li>
         </ul>
     </div>
     <div class="navbar">
@@ -32,7 +32,7 @@
             <a class="brand" href="#">
             <!-- UNCOMMENT THE CSS VALUES TO TEST OTHER DIMENTIONS -->
             <!-- <img src="http://placehold.it/150x80&text=Logo" alt=""> -->
-            <img src="icono.png" alt="">
+            <img src="Imagenes/icono.png" alt="">
             </a>
             <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
             <span class="icon-bar"></span>
