--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -18,51 +18,51 @@
   <body>
 
 
-
+    <div class="navbar navbar-default navbar-fixed-top">
     <div class="container">
-    <div class="row">
-        <ul>
-            <li><code>.navbar-inner{ "250" }</code> </li>            
-            <li><code>.navbar .nav > li > a {"100"}</code> </li>
-            <li><code>.navbar .btn-navbar{"15"}</code> </li>
-        </ul>
-    </div>
-    <div class="navbar">
-        <div class="navbar-inner">
-            <a class="brand" href="#">
-            <!-- UNCOMMENT THE CSS VALUES TO TEST OTHER DIMENTIONS -->
-            <!-- <img src="http://placehold.it/150x80&text=Logo" alt=""> -->
-            <img src="Imagenes/icono.png" alt="">
+
+        <div class="navbar-header">
+            <button button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                <img style="max-width:100px; margin-top: -7px;"
+                     src="//www.google.com/favicon.ico">
             </a>
-            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            </a>
-            <div class="nav-collapse collapse">
-                <ul class="nav">
-                    <li class="active"><a href="#">Home</a></li>
-                    <li><a href="#">"index.html"</a></li>
-                    <li><a href="#">"index.html"</a></li>
-                    <ul class="nav">
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Dropdown
-                            <b class="caret"></b>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a href="#">"index.html"</a></li>
-                                <li><a href="#">"index.html"</a></li>
-                                <li><a href="#">"index.html"</a></li>
-                                <li><a href="#">"index.html"</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </ul>
-            </div>
         </div>
+        
+        <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li class="dropdown-header">Nav header</li>
+                        <li><a href="#">Separated link</a></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>
+            </ul>
+      <form class="navbar-form navbar-right" role="search" method="get" id="searchform" action="">
+        <div class="form-group">
+          <input name="s" id="s" type="text" class="search-query form-control" autocomplete="off" placeholder="Search...">
+        </div>
+      </form>
+    </div>
+
     </div>
 </div>
+
+  
 
     <!-- CAROUSEL 1 -->
 
