--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -36,9 +36,9 @@
         
         <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="index.html">About</a></li>
-                <li><a href="index.html">Contact</a></li>
+                <li class="active"><a href="index.html">&nbsp&nbspHome&nbsp&nbsp</a></li>
+                <li><a href="index.html">&nbsp&nbspAbout&nbsp&nbsp</a></li>
+                <li><a href="index.html">&nbsp&nbspContact&nbsp&nbsp</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
                     <ul class="dropdown-menu">
