--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -30,7 +30,7 @@
             </button>
             <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
                 <img style="max-width: 200px; margin-top: 0px;"
-                     src="//www.google.com/favicon.ico">
+                     src="Imagenes/anillo.jpg">
             </a>
         </div>
         
