--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -73,22 +73,22 @@
         <div class="item active">
           <img src="Imagenes/Egipto.jpg" alt="First Slide">
           <div class="carousel-caption">
-            <h3>Título de la primera diapositiva</h3>
-            <p>Contenido de la diapositiva</p>
+            <h3 style="color:black;">Título de la primera diapositiva</h3>
+            <p style="color:black;">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Bramble.jpg" alt="Second Slide">
           <div class="carousel-caption">
-            <h3>Título de la segunda diapositiva</h3>
-            <p>Contenido de la diapositiva</p>
+            <h3 color:black>Título de la segunda diapositiva</h3>
+            <p color:black>Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Egipto.jpg" alt="Third Slide">
           <div class="carousel-caption">
-            <h3>Título de la tercera diapositiva</h3>
-            <p>Contenido de la diapositiva</p>
+            <h3 color:black>Título de la tercera diapositiva</h3>
+            <p color:black>Contenido de la diapositiva</p>
           </div>
         </div>
       </div>
