--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="jQuery.js"></script>
   </head>
   <body>
 
@@ -37,7 +38,7 @@
         <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">&nbsp&nbsp&nbsp Home &nbsp&nbsp&nbsp</a></li>
-                <li><a href="index.html">&nbsp&nbsp&nbsp About &nbsp&nbsp&nbsp</a></li>
+                <li><a href="productos.html">&nbsp&nbsp&nbsp Productos &nbsp&nbsp&nbsp</a></li>
                 <li><a href="index.html">&nbsp&nbsp&nbsp Contact &nbsp&nbsp&nbsp</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">&nbsp&nbsp&nbsp Dropdown &nbsp&nbsp&nbsp <span class="caret"></span></a>
@@ -80,15 +81,15 @@
         <div class="item">
           <img src="Imagenes/Bramble.jpg" alt="Second Slide">
           <div class="carousel-caption">
-            <h3 color:black>Título de la segunda diapositiva</h3>
-            <p color:black>Contenido de la diapositiva</p>
+            <h3 style=color:black>Título de la segunda diapositiva</h3>
+            <p style=color:black>Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Egipto.jpg" alt="Third Slide">
           <div class="carousel-caption">
-            <h3 color:black>Título de la tercera diapositiva</h3>
-            <p color:black>Contenido de la diapositiva</p>
+            <h3 style=color:black>Título de la tercera diapositiva</h3>
+            <p style=color:black>Contenido de la diapositiva</p>
           </div>
         </div>
       </div>
