--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -73,19 +73,19 @@
                     </li>
 
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-1"><img src="http://placehold.it/150x150&text=1"></a>
+                        <a class="thumbnail" id="carousel-selector-1"><img src="Imagenes/Bramble.jpg"></a>
                     </li>
 
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-2"><img src="http://placehold.it/150x150&text=2"></a>
+                        <a class="thumbnail" id="carousel-selector-2"><img src="Imagenes/Bramble.jpg"></a>
                     </li>
 
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-3"><img src="http://placehold.it/150x150&text=3"></a>
+                        <a class="thumbnail" id="carousel-selector-3"><img src="Imagenes/Bramble.jpg"></a>
                     </li>
 
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-4"><img src="http://placehold.it/150x150&text=4"></a>
+                        <a class="thumbnail" id="carousel-selector-4"><img src="Imagenes/Bramble.jpg"></a>
                     </li>
 
                     <li class="col-sm-3">
