--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -139,10 +139,10 @@
                                 <!-- Carousel items -->
                                 <div class="carousel-inner">
                                     <div class="active item" data-slide-number="0">
-                                        <img src="http://placehold.it/470x480&text=zero"></div>
+                                        <img src="Imagenes/Bramble.jpg"></div>
 
                                     <div class="item" data-slide-number="1">
-                                        <img src="http://placehold.it/470x480&text=1"></div>
+                                        <img src="Imagenes/Bramble.jpg"></div>
 
                                     <div class="item" data-slide-number="2">
                                         <img src="http://placehold.it/470x480&text=2"></div>
