--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -39,17 +39,13 @@
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">&nbsp&nbsp&nbsp Home &nbsp&nbsp&nbsp</a></li>
                 <li><a href="productos.html">&nbsp&nbsp&nbsp Productos &nbsp&nbsp&nbsp</a></li>
-                <li><a href="index.html">&nbsp&nbsp&nbsp Contact &nbsp&nbsp&nbsp</a></li>
+                <li><a href="index.html">&nbsp&nbsp&nbsp Contacto &nbsp&nbsp&nbsp</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">&nbsp&nbsp&nbsp Dropdown &nbsp&nbsp&nbsp <span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="index.html">Action</a></li>
                         <li><a href="index.html">Another action</a></li>
                         <li><a href="index.html">Something else here</a></li>
-                        <li role="separator" class="divider"></li>
-                        <li class="dropdown-header">Nav header</li>
-                        <li><a href="index.html">Separated link</a></li>
-                        <li><a href="index.html">One more separated link</a></li>
                     </ul>
                 </li>
             </ul>
