--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -30,6 +30,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                <h2 style=color:black>Joyería</h2>
                 <img style="max-width: 200px; margin-top: -10px;"
                      src="Imagenes/anillo.jpg">
             </a>
