--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -29,12 +29,12 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
-                <li><h2 style=color:black>Joyería</h2>
+            <li><a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+                <h2 style=color:black>Joyería</h2>
                 <img style="max-width: 200px; margin-top: -10px;"
                      src="Imagenes/anillo.jpg">
-                </li>
-            </a>
+                
+            </a></li>
         </div>
         
         <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
