--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -74,22 +74,22 @@
         <div class="item active">
           <img src="Imagenes/Egipto.jpg" alt="First Slide">
           <div class="carousel-caption">
-            <h3 style="color:black;">Título de la primera diapositiva</h3>
-            <p style="color:black;">Contenido de la diapositiva</p>
+            <h3 style="color:#808080;">Título de la primera diapositiva</h3>
+            <p style="color:#808080;">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Bramble.jpg" alt="Second Slide">
           <div class="carousel-caption">
-            <h3 style=color:black>Título de la segunda diapositiva</h3>
-            <p style=color:black>Contenido de la diapositiva</p>
+            <h3 style="color:#808080">Título de la segunda diapositiva</h3>
+            <p style="color:#808080">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Egipto.jpg" alt="Third Slide">
           <div class="carousel-caption">
-            <h3 style=color:black>Título de la tercera diapositiva</h3>
-            <p style=color:black>Contenido de la diapositiva</p>
+            <h3 style="color:#808080">Título de la tercera diapositiva</h3>
+            <p style="color:#808080">Contenido de la diapositiva</p>
           </div>
         </div>
       </div>
@@ -117,22 +117,22 @@
         <div class="item active">
           <img src="Imagenes/Egipto.jpg" alt="First Slide">
           <div class="carousel-caption">
-            <h3>Título de la primera diapositiva</h3>
-            <p>Contenido de la diapositiva</p>
+            <h3 style="color:#657072" >Título de la primera diapositiva</h3>
+            <p style="color:#657072" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Bramble.jpg" alt="Second Slide">
           <div class="carousel-caption">
-            <h3>Título de la segunda diapositiva</h3>
-            <p>Contenido de la diapositiva</p>
+            <h3 style="color:#657072" >Título de la segunda diapositiva</h3>
+            <p style="color:#657072" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
           <img src="Imagenes/Egipto.jpg" alt="Third Slide">
           <div class="carousel-caption">
-            <h3>Título de la tercera diapositiva</h3>
-            <p>Contenido de la diapositiva</p>
+            <h3 style="color:#657072" >Título de la tercera diapositiva</h3>
+            <p style="color:#657072" >Contenido de la diapositiva</p>
           </div>
         </div>
       </div>
