--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -37,15 +37,15 @@
         
         <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html">&nbsp&nbsp&nbsp Home &nbsp&nbsp&nbsp</a></li>
-                <li><a href="index.html">&nbsp&nbsp&nbsp Productos &nbsp&nbsp&nbsp</a></li>
-                <li><a href="index.html">&nbsp&nbsp&nbsp Contacto &nbsp&nbsp&nbsp</a></li>
+                <li class="active"><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Home &nbsp&nbsp&nbsp</a></li>
+                <li><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Productos &nbsp&nbsp&nbsp</a></li>
+                <li><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Contacto &nbsp&nbsp&nbsp</a></li>
                 <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">&nbsp&nbsp&nbsp Dropdown &nbsp&nbsp&nbsp <span class="caret"></span></a>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" style="color:#657072">&nbsp&nbsp&nbsp Dropdown &nbsp&nbsp&nbsp <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a href="index.html">Action</a></li>
-                        <li><a href="index.html">Another action</a></li>
-                        <li><a href="index.html">Something else here</a></li>
+                        <li><a href="index.html" style="color:#657072">Action</a></li>
+                        <li><a href="index.html" style="color:#657072">Another action</a></li>
+                        <li><a href="index.html" style="color:#657072">Something else here</a></li>
                     </ul>
                 </li>
             </ul>
