--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -37,7 +37,7 @@
         
         <div id="navbar" class="collapse navbar-collapse navbar-responsive-collapse">
             <ul class="nav navbar-nav">
-                <li ><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Home &nbsp&nbsp&nbsp</a></li>
+                <li class="active"><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Home &nbsp&nbsp&nbsp</a></li>
                 <li><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Productos &nbsp&nbsp&nbsp</a></li>
                 <li><a href="index.html" style="color:#657072">&nbsp&nbsp&nbsp Contacto &nbsp&nbsp&nbsp</a></li>
                 <li class="dropdown">
