--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
-                <h2 style=color:black>Orfebrería</h2>
+                <h2 style=color:black margin-top:"-8px;">Orfebrería</h2>
             </a>
             
         </div>
