--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -29,7 +29,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+            <a class="navbar-brand" rel="home" href="#" title="">
                 <h2 style=color:black id="Titulo">Orfebrería</h2>
             </a>
             
