--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -30,8 +30,7 @@
                 <span class="icon-bar"></span>
             </button>
             <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
-                <img style="max-width: 200px; margin-top: -10px;"
-                     src="Imagenes/anillo.jpg">
+                <h2 style=color:black id="Titulo">Orfebrería</h2>
             </a>
         </div>
         
