--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -62,6 +62,9 @@
             <div class="col-sm-6" id="slider-thumbs">
                 <!-- Bottom switcher of slider -->
                 <ul class="hide-bullets">
+
+                    <h2>Anillos</h2>
+
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-0">
                             <img src="http://placehold.it/150x150&text=zero">
@@ -94,6 +97,8 @@
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-7"><img src="http://placehold.it/150x150&text=7"></a>
                     </li>
+
+                    <h2>Collares</h2>
 
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-8"><img src="http://placehold.it/150x150&text=8"></a>
