--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -98,7 +98,7 @@
                         <a class="thumbnail" id="carousel-selector-7"><img src="http://placehold.it/150x150&text=7"></a>
                     </li>
 
-                    <h2>Collares</h2>
+                    <h2 margin-top: "5%">Collares</h2>
 
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-8"><img src="http://placehold.it/150x150&text=8"></a>
