--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -68,7 +68,7 @@
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="Imagenes/Egipto.jpg" alt="First Slide">
+          <img src="Imagenes/Bramble.jpg" alt="First Slide">
           <div class="carousel-caption">
             <h3 style="color:#778899;">Título de la primera diapositiva</h3>
             <p style="color:#778899;">Contenido de la diapositiva</p>
