--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -66,7 +66,7 @@
                     <h2>Anillos</h2>
 
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-0" heigth:50px>
+                        <a class="thumbnail" id="carousel-selector-0">
                             <img src="http://placehold.it/150x150&text=zero">
                         </a>
                     </li>
