--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -63,7 +63,7 @@
                 <!-- Bottom switcher of slider -->
                 <ul class="hide-bullets">
 
-                    <h2>Anillos</h2>
+                    <h2 id="subtituloproductos">Anillos</h2>
 
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-0">
@@ -88,7 +88,7 @@
                     </li>
 
                     <li class="col-sm-3">
-                        <a class="thumbnail" id="carousel-selector-5"><img src="http://placehold.it/150x150&text=5"></a>
+                        <a class="thumbnail" id="carousel-selector-5"><img src="Imagenes/arte.jpg"></a>
                     </li>
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-6"><img src="http://placehold.it/150x150&text=6"></a>
@@ -98,7 +98,7 @@
                         <a class="thumbnail" id="carousel-selector-7"><img src="http://placehold.it/150x150&text=7"></a>
                     </li>
 
-                    <h2 margin-top: "50%">Collares</h2>
+                    <h2 id="subtituloproductos">Collares</h2>
 
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-8"><img src="http://placehold.it/150x150&text=8"></a>
