--- a/Downloads/Website/productos.html
+++ b/Downloads/Website/productos.html
@@ -67,7 +67,7 @@
 
                     <li class="col-sm-3">
                         <a class="thumbnail" id="carousel-selector-0">
-                            <img src="http://placehold.it/150x150&text=zero">
+                            <img src="Imagenes/Meso.jpg">
                         </a>
                     </li>
 
