--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -75,14 +75,14 @@
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/Bramble.jpg" alt="Second Slide">
+          <img src="Imagenes/goldhd1.jpg" alt="Second Slide">
           <div class="carousel-caption">
             <h3 style="color:#778899">Título de la segunda diapositiva</h3>
             <p style="color:#778899">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/Egipto.jpg" alt="Third Slide">
+          <img src="Imagenes/goldhd1.jpg" alt="Third Slide">
           <div class="carousel-caption">
             <h3 style="color:#778899">Título de la tercera diapositiva</h3>
             <p style="color:#778899">Contenido de la diapositiva</p>
@@ -118,14 +118,14 @@
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/Bramble.jpg" alt="Second Slide">
+          <img src="Imagenes/silver-ringsilver" alt="Second Slide">
           <div class="carousel-caption">
             <h3 style="color:#657072" >Título de la segunda diapositiva</h3>
             <p style="color:#657072" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/Egipto.jpg" alt="Third Slide">
+          <img src="Imagenes/silver-ringsilver.jpg" alt="Third Slide">
           <div class="carousel-caption">
             <h3 style="color:#657072" >Título de la tercera diapositiva</h3>
             <p style="color:#657072" >Contenido de la diapositiva</p>
