--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -68,7 +68,7 @@
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="Imagenes/goldhd1.jpg" alt="First Slide">
+          <img src="Imagenes/cubes2.jpg" alt="First Slide">
           <div class="carousel-caption">
             <h3 style="color:#ffffff;">Título de la primera diapositiva</h3>
             <p style="color:#ffffff;">Contenido de la diapositiva</p>
