--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -75,14 +75,14 @@
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/goldhd1.jpg" alt="Second Slide">
+          <img src="Imagenes/cubes2.jpg" alt="Second Slide">
           <div class="carousel-caption">
             <h3 style="color:#ffffff">Título de la segunda diapositiva</h3>
             <p style="color:#ffffff">Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/goldhd1.jpg" alt="Third Slide">
+          <img src="Imagenes/cubes2.jpg" alt="Third Slide">
           <div class="carousel-caption">
             <h3 style="color:#ffffff">Título de la tercera diapositiva</h3>
             <p style="color:#ffffff">Contenido de la diapositiva</p>
@@ -111,24 +111,24 @@
       <!-- Carousel items -->
       <div class="carousel-inner">
         <div class="item active">
-          <img src="Imagenes/silver-ringsilver.jpg" alt="First Slide">
+          <img src="Imagenes/metal2.jpg" alt="First Slide">
           <div class="carousel-caption">
-            <h3 style="color:#778899" >Título de la primera diapositiva</h3>
-            <p style="color:#778899" >Contenido de la diapositiva</p>
+            <h3 style="color:#000000" >Título de la primera diapositiva</h3>
+            <p style="color:#000000" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/silver-ringsilver.jpg" alt="Second Slide">
+          <img src="Imagenes/metal2.jpg" alt="Second Slide">
           <div class="carousel-caption">
-            <h3 style="color:#778899" >Título de la segunda diapositiva</h3>
-            <p style="color:#778899" >Contenido de la diapositiva</p>
+            <h3 style="color:#000000" >Título de la segunda diapositiva</h3>
+            <p style="color:#000000" >Contenido de la diapositiva</p>
           </div>
         </div>
         <div class="item">
-          <img src="Imagenes/silver-ringsilver.jpg" alt="Third Slide">
+          <img src="Imagenes/metal2.jpg" alt="Third Slide">
           <div class="carousel-caption">
-            <h3 style="color:#778899" >Título de la tercera diapositiva</h3>
-            <p style="color:#778899" >Contenido de la diapositiva</p>
+            <h3 style="color:#000000" >Título de la tercera diapositiva</h3>
+            <p style="color:#000000" >Contenido de la diapositiva</p>
           </div>
         </div>
       </div>
