--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Slider en Bootstrap</title>
+    <title>Página Orfebrería</title>
     <link rel="stylesheet" href="estiloEco.css"/>
     <link rel="stylesheet" href="style.css"/>
     
