--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -19,7 +19,7 @@
   <body>
 
 
-    <div class="navbar navbar-default navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top" style="background-color:#ead4d7">
     <div class="container">
 
         <div class="navbar-header">
