--- a/Downloads/Website/index.html
+++ b/Downloads/Website/index.html
@@ -16,7 +16,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     
   </head>
-  <body>
+  <body style="background-color:#657072">
 
 
     <div class="navbar navbar-default navbar-fixed-top">
